# dawgpyl

./: .gitignore  00_EH_DEV.ipynb  01_EH_COPILOT.ipynb  03_EH_AGENTS.ipynb  04_EH_RAG.ipynb  404.html  LICENSE  README.html  README.md  __init__.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test.py
agents/: index.html
common/: index.html
configs/: agents.py  apis.py  core.py  models.py  projects.py  prompts.py  tasks.py  teams.py  tools.py
core/: index.html
data/external_docs/: python_docx_documentation_2023-10-10.txt
data/external_docs/webpages/: google_python_styleguide.md
data/logs/: log_2024-11-13.joblib
data/notes/: linux.md  markdown.md  model_evaluation.docx
data/prompts/: claude_sys_prompt.txt  gpt_sys_prompt.txt
data/samples/clean/: Base_OF_01.csv  Base_OM_01.csv  Base_YF_01.csv  Base_YM_01.csv
data/samples/dirty/: Base_OF_1.csv  Base_OM_1.csv  Base_YF_1.csv  Base_YM_1.csv  dirty_data.csv
docs/: agents.md  common.md  core.md  documentation.md  env.md  graphs.md  index.md  io.md  models.md  printing.md  prompts.md  teams.md
documentation/: index.html
env/: index.html
libs/: __init__.py  agent_tools.py  agents.py  base.py  common.py  core.py  env.py  file_conversions.py  graphs.py  io.py  models.py  printing.py  projects.py  tasks.py  teams.py
libs/utilities/: __init__.py  common.py  io.py
models/: index.html
notebooks/: 00_DEV.ipynb  01_COPILOT.ipynb  02_COPILOT_LOCAL.ipynb  03_AGENTS.ipynb  04_RAG.ipynb  dev_classes.ipynb
printing/: index.html
prompts/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/agents/: index.html
site/common/: index.html
site/graphs/: index.html
site/io/: index.html
site/models/: index.html
site/printing/: index.html
site/search/: search_index.json
site/teams/: index.html
teams/: index.html
tests/: ai_tests.py
tools/file_parsing/: parser_pdf.py
tools/webscraper/: README.md  webscraper.ipynb
