[project]
name = "dawgpyl"
version = "0.1.0"
requires-python = "==3.11"
description = "Directing Agents With Graphs - python library"
authors = [
  {name = "Erik Hodges", email = "erik.lewis.hodges@gmail.com"},  
]
maintainers = [
  {name = "Erik Hodges", email = "erik.lewis.hodges@gmail.com"},  
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
"Development Status :: 2 - Pre-Alpha",
"Intended Audience :: Developers",
"Programming Language :: Python :: 3.11",
]
dependencies = [
    "mkdocstrings-python",
    "absl-py==2.0.0",
    "accelerate==0.26.1",
    "aiohttp==3.8.6",
    "aiosignal==1.3.1",
    "annotated-types==0.6.0",
    "anyio==4.0.0",
    "argon2-cffi==23.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "astroid==3.0.1",
    "asttokens==2.4.1",
    "astunparse==1.6.3",
    "async-lru==2.0.4",
    "async-timeout==4.0.3",
    "attrs==23.1.0",
    "Babel==2.13.1",
    "backcall==0.2.0",
    "beautifulsoup4==4.12.2",
    "black==23.10.0",
    "bleach==6.1.0",
    "cachetools==5.3.1",
    "certifi==2023.7.22",
    "cffi==1.16.0",
    "charset-normalizer==3.3.0",
    "chex==0.1.83",
    "click==8.1.7",
    "cloudpickle==3.0.0",
    "colorama==0.4.6",
    "comm==0.1.4",
    "contourpy==1.1.1",
    "cycler==0.12.1",
    "dataclasses-json==0.6.3",
    "debugpy==1.8.0",
    "decorator==5.1.1",
    "defusedxml==0.7.1",
    "dill==0.3.7",
    "distro==1.9.0",
    "dm-tree==0.1.8",
    "docker==6.1.3",
    "etils==1.5.1",
    "executing==2.0.0",
    "fastjsonschema==2.18.1",
    "filelock==3.9.0",
    "flatbuffers==23.5.26",
    "flax==0.7.4",
    "fonttools==4.43.1",
    "fqdn==1.5.1",
    "frozenlist==1.4.0",
    "fsspec==2023.4.0",
    "gast==0.5.4",
    "google-auth==2.23.3",
    "google-auth-oauthlib==1.0.0",
    "google-pasta==0.2.0",
    "greenlet==3.0.2",
    "grpcio==1.59.0",
    "h11==0.14.0",
    "h5py==3.10.0",
    "httpcore==1.0.2",
    "httpx==0.26.0",
    "huggingface-hub==0.17.3",
    "idna==3.4",
    "importlib-resources==6.1.0",
    "ipykernel==6.26.0",
    "ipython==8.16.1",
    "ipython-genutils==0.2.0",
    "ipywidgets==8.1.1",
    "isoduration==20.11.0",
    "isort==5.12.0",
    "jax==0.4.18",
    "jaxlib==0.4.18",
    "jedi==0.19.1",
    "Jinja2==3.1.2",
    "joblib==1.3.2",
    "json5==0.9.14",
    "jsonpatch==1.33",
    "jsonpointer==2.4",
    "jsonschema==4.19.1",
    "jsonschema-specifications==2023.7.1",
    "jupyter==1.0.0",
    "jupyter-console==6.6.3",
    "jupyter-events==0.8.0",
    "jupyter-lsp==2.2.0",
    "jupyter_client==8.5.0",
    "jupyter_core==5.4.0",
    "jupyter_server==2.9.1",
    "jupyter_server_terminals==0.4.4",
    "jupyterlab==4.0.7",
    "jupyterlab-pygments==0.2.2",
    "jupyterlab-widgets==3.0.9",
    "jupyterlab_server==2.25.0",
    "keras==2.14.0",
    "keras-core==0.1.7",
    "keras-tuner==1.4.5",
    "kiwisolver==1.4.5",
    "kt-legacy==1.0.5",
    "langchain==0.0.350",
    "langchain-community==0.0.3",
    "langchain-core==0.1.1",
    "langsmith==0.0.71",
    "libclang==16.0.6",
    "llvmlite==0.41.1",
    "Markdown==3.5",
    "markdown-it-py==3.0.0",
    "MarkupSafe==2.1.3",
    "marshmallow==3.20.1",
    "matplotlib==3.8.0",
    "matplotlib-inline==0.1.6",
    "mccabe==0.7.0",
    "mdurl==0.1.2",
    "mistune==3.0.2",
    "ml-dtypes==0.2.0",
    "mpmath==1.3.0",
    "msgpack==1.0.7",
    "multidict==6.0.4",
    "mypy-extensions==1.0.0",
    "namex==0.0.7",
    "nbclient==0.8.0",
    "nbconvert==7.9.2",
    "nbformat==5.9.2",
    "nest-asyncio==1.5.8",
    "networkx==3.0",
    "notebook==7.0.6",
    "notebook_shim==0.2.3",
    "numba==0.58.1",
    "numpy==1.26.3",
    "oauthlib==3.2.2",
    "openai==1.10.0",
    "opt-einsum==3.3.0",
    "optax==0.1.7",
    "orbax-checkpoint==0.4.1",
    "overrides==7.4.0",
    "packaging==23.2",
    "pandas==2.2.0",
    "pandocfilters==1.5.0",
    "parso==0.8.3",
    "pathspec==0.11.2",
    "pickleshare==0.7.5",
    "Pillow==9.3.0",
    "platformdirs==3.11.0",
    "prometheus-client==0.17.1",
    "prompt-toolkit==3.0.39",
    "protobuf==4.24.4",
    "psutil==5.9.6",
    "pure-eval==0.2.2",
    "pyarrow==13.0.0",
    "pyasn1==0.5.0",
    "pyasn1-modules==0.3.0",
    "pycparser==2.21",
    "pydantic==2.5.2",
    "pydantic_core==2.14.5",
    "Pygments==2.16.1",
    "pylance==0.8.5",
    "pylint==3.0.1",
    "pyparsing==3.1.1",
    "python-dateutil==2.8.2",
    "python-json-logger==2.0.7",
    "pytz==2023.3.post1",
    "pywin32==306",
    "pywinpty==2.0.12",
    "PyYAML==6.0.1",
    "pyzmq==25.1.1",
    "qtconsole==5.4.4",
    "QtPy==2.4.1",
    "referencing==0.30.2",
    "regex==2023.10.3",
    "requests==2.31.0",
    "requests-oauthlib==1.3.1",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==13.6.0",
    "rpds-py==0.10.6",
    "rsa==4.9",
    "safetensors==0.4.0",
    "scikit-learn==1.3.2",
    "scipy==1.11.3",
    "Send2Trash==1.8.2",
    "shap==0.43.0",
    "six==1.16.0",
    "slicer==0.0.7",
    "sniffio==1.3.0",
    "soupsieve==2.5",
    "SQLAlchemy==2.0.23",
    "stack-data==0.6.3",
    "sympy==1.12",
    "tenacity==8.2.3",
    "tensorboard==2.14.1",
    "tensorboard-data-server==0.7.1",
    "tensorflow==2.14.0",
    "tensorflow-estimator==2.14.0",
    "tensorflow-intel==2.14.0",
    "tensorflow-io-gcs-filesystem==0.31.0",
    "tensorstore==0.1.45",
    "termcolor==2.3.0",
    "terminado==0.17.1",
    "threadpoolctl==3.2.0",
    "tinycss2==1.2.1",
    "tokenizers==0.14.1",
    "tomlkit==0.12.1",
    "toolz==0.12.0",
    "torch==2.1.0+cu118",
    "torchaudio==2.1.0+cu118",
    "torchvision==0.16.0+cu118",
    "tornado==6.3.3",
    "tqdm==4.66.1",
    "traitlets==5.12.0",
    "transformers==4.34.0",
    "types-python-dateutil==2.8.19.14",
    "typing-inspect==0.9.0",
    "typing_extensions==4.8.0",
    "tzdata==2023.3",
    "uri-template==1.3.0",
    "urllib3==2.0.6",
    "varname==0.12.0",
    "wcwidth==0.2.8",
    "webcolors==1.13",
    "webencodings==0.5.1",
    "websocket-client==1.6.4",
    "Werkzeug==3.0.0",
    "wget==3.2",
    "widgetsnbextension==4.0.9",
    "wrapt==1.14.1",
    "xgboost==2.0.1",
    "yarl==1.9.2",
    "zipp==3.17.0",
]

[project.urls]
Homepage = "https://www.erikhodges.com/"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/erikhodges/dawgpyl"
Thanks = "https://saythanks.io/to/erik.lewis.hodges"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["libs"]